# internet_radio_v2

./: .gitignore  ARCHIVE_MANIFEST.md  CMakeLists.txt  Makefile  README.md  diagnosing_i2s_i2c_fail.md  http_errors_for_recovery.txt  khen_128  partitions_internet_radio_adf.csv  readme.md  sdkconfig  sdkconfig.ci  sdkconfig.defaults  sdkconfig.old  station_discovery.md  station_metadata_research.md  stations.json  v1_build_details.md  v2_build_details.md
components/: component.mk
components/es8388_board/: CMakeLists.txt  CMakeLists.txt.bup_from_parent_folder  board.c  board_def.h  board_pins_config.c  component.mk.bup_from_parent_directory
components/esp_codec_dev/: CMakeLists.txt  idf_component.yml
components/esp_peripherals/: CMakeLists.txt
components/esp_peripherals/lib/blufi/: blufi_security.c
data/: README.md  stations.json
main/: CMakeLists.txt  audio_pipeline_manager.c  audio_pipeline_manager.h  diagnose_404.txt  encoders.c  encoders.h  getting_url_and_codec.md  idf_component.yml  internet_radio_adf.c  internet_radio_adf.c@@ -91,6 +91,7 @@  internet_radio_adf.h  internet_radio_adf_after_refactor_with_old_code.c  internet_radio_adf_before_refactor_applied.c  ir_rmt.c  ir_rmt.h  lvgl_ssd1306_setup.c  lvgl_ssd1306_setup.h  mp3_sync_filter.c  mp3_sync_filter.h  screens.c  screens.h  station_data.c  station_data.h  test_ssd1306.c  v1_build_details.md  web_server.c  web_server.h
schematic/: schematic.kicad_pro  schematic.kicad_sch
